force-app/main/default/objects/COM_InsurerCommission__c/COM_InsurerCommission__c.object-meta.xml
<CustomObject>
    <description>보험사별 제품별 수수료율 정보 관리</description>
    <label>Insurer Commission</label>
    <nameField>
        <displayFormat>IC_{0000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurer Commissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>