force-app/main/default/objects/COM_InsurerCommission__c/fields/Insurer_lk__c.field-meta.xml
<CustomField>
    <fullName>Insurer_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isInsurerAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurer Commissions</relationshipLabel>
    <relationshipName>Insurer_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>