force-app/main/default/objects/COM_InsurerCommission__c/fields/InsurerLOB__c.field-meta.xml
<CustomField>
    <fullName>InsurerLOB__c</fullName>
    <label>Insurer LOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>