force-app/main/default/objects/COM_InsurerCommission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Insurer_lk__c</columns>
    <columns>InsurerLOB__c</columns>
    <columns>InsurerCommission__c</columns>
    <columns>LOB1__c</columns>
    <columns>LOB2__c</columns>
    <columns>LOB3__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>